WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198696
Drag starting state can get stuck even though the drag has ended
https://bugs.webkit.org/show_bug.cgi?id=198696
Summary
Drag starting state can get stuck even though the drag has ended
Dean Jackson
Reported
2019-06-08 18:39:40 PDT
Drag starting state can get stuck even though the drag has ended
Attachments
Patch
(4.18 KB, patch)
2019-06-08 18:41 PDT
,
Dean Jackson
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-06-08 18:41:35 PDT
Created
attachment 371693
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-06-08 18:42:30 PDT
<
rdar://problem/51556045
>
Wenson Hsieh
Comment 3
2019-06-08 18:44:39 PDT
Comment on
attachment 371693
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371693&action=review
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:6746 > + RELEASE_LOG(DragAndDrop, "Drag session willAnimateLiftWithAnimator: %p (animation completion block fired)", session);
Nit - this is redundant in the case where finalPosition == UIViewAnimatingPositionStart. Maybe add this logging state as an `else` clause of the `if (finalPosition == UIViewAnimatingPositionStart)` below?
Dean Jackson
Comment 4
2019-06-09 13:03:34 PDT
Committed
r246239
: <
https://trac.webkit.org/changeset/246239
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug